--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,27 @@
-node_modules/
-npm-debug.log
-.DS_Store
-/*.env
+# OS X
+.DS_Store*
+Icon?
+._*
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Linux
+.directory
+*~
+
+
+# npm
+node_modules
 package-lock.json
+*.log
+*.gz
+
+
+# Coveralls
+coverage
+
+# Benchmarking
+benchmarks/graphs
